--- a/classes/_base_.base.html
+++ b/classes/_base_.base.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Base | multibase - v3.0.2-rc.0</title>
-	<meta name="description" content="Documentation for multibase - v3.0.2-rc.0">
+	<title>Base | multibase - v3.1.0</title>
+	<meta name="description" content="Documentation for multibase - v3.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link href="https://unpkg.com/nord-highlightjs@0.1.0/dist/nord.css" rel="stylesheet" type="text/css" />
@@ -132,7 +132,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">multibase - v3.0.2-rc.0</a>
+					<a href="../index.html" class="title">multibase - v3.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<a href="#" class="toolbar-icon toolbar-icon-menu" data-toggle="menu"><i class="gg-menu"></i></a>
@@ -160,7 +160,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>Class</p>
+						<p>Class to encode/decode in the supported Bases</p>
 					</div>
 				</div>
 			</section>
@@ -179,8 +179,8 @@
 						<section class="tsd-index-section ">
 							<h3>References</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-reference tsd-parent-kind-class"><a href="_base_.base.html#basecodes" class="tsd-kind-icon">Base<wbr>Codes</a></li>
-								<li class="tsd-kind-reference tsd-parent-kind-class"><a href="_base_.base.html#basenames" class="tsd-kind-icon">Base<wbr>Names</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-class"><a href="_base_.base.html#basecode" class="tsd-kind-icon">Base<wbr>Code</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-class"><a href="_base_.base.html#basename" class="tsd-kind-icon">Base<wbr>Name</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-class"><a href="_base_.base.html#codecfactory" class="tsd-kind-icon">Codec<wbr>Factory</a></li>
 							</ul>
 						</section>
@@ -213,14 +213,14 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>References</h2>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-class">
-					<a name="basecodes" class="tsd-anchor"></a>
-					<h3>Base<wbr>Codes</h3>
-					Re-exports <a href="../modules/_base_.html#basecodes">BaseCodes</a>
+					<a name="basecode" class="tsd-anchor"></a>
+					<h3>Base<wbr>Code</h3>
+					Re-exports <a href="../modules/_base_.html#basecode">BaseCode</a>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-class">
-					<a name="basenames" class="tsd-anchor"></a>
-					<h3>Base<wbr>Names</h3>
-					Re-exports <a href="../modules/_base_.html#basenames">BaseNames</a>
+					<a name="basename" class="tsd-anchor"></a>
+					<h3>Base<wbr>Name</h3>
+					Re-exports <a href="../modules/_base_.html#basename">BaseName</a>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-class">
 					<a name="codecfactory" class="tsd-anchor"></a>
@@ -234,7 +234,7 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Base<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#basenames" class="tsd-signature-type">BaseNames</a>, code<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#basecodes" class="tsd-signature-type">BaseCodes</a>, factory<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#codecfactory" class="tsd-signature-type">CodecFactory</a>, alphabet<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_base_.base.html" class="tsd-signature-type">Base</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Base<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#basename" class="tsd-signature-type">BaseName</a>, code<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a>, factory<span class="tsd-signature-symbol">: </span><a href="_base_.base.html#codecfactory" class="tsd-signature-type">CodecFactory</a>, alphabet<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_base_.base.html" class="tsd-signature-type">Base</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -245,10 +245,10 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>name: <a href="_base_.base.html#basenames" class="tsd-signature-type">BaseNames</a></h5>
+									<h5>name: <a href="_base_.base.html#basename" class="tsd-signature-type">BaseName</a></h5>
 								</li>
 								<li>
-									<h5>code: <a href="_base_.base.html#basecodes" class="tsd-signature-type">BaseCodes</a></h5>
+									<h5>code: <a href="_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a></h5>
 								</li>
 								<li>
 									<h5>factory: <a href="_base_.base.html#codecfactory" class="tsd-signature-type">CodecFactory</a></h5>
@@ -278,7 +278,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="code" class="tsd-anchor"></a>
 					<h3>code</h3>
-					<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <a href="_base_.base.html#basecodes" class="tsd-signature-type">BaseCodes</a></div>
+					<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <a href="_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -346,7 +346,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="_base_.base.html#basenames" class="tsd-signature-type">BaseNames</a></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="_base_.base.html#basename" class="tsd-signature-type">BaseName</a></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -430,10 +430,10 @@
 						<a href="_base_.base.html" class="tsd-kind-icon">Base</a>
 						<ul>
 							<li class=" tsd-kind-reference tsd-parent-kind-class">
-								<a href="_base_.base.html#basecodes" class="tsd-kind-icon">Base<wbr>Codes</a>
+								<a href="_base_.base.html#basecode" class="tsd-kind-icon">Base<wbr>Code</a>
 							</li>
 							<li class=" tsd-kind-reference tsd-parent-kind-class">
-								<a href="_base_.base.html#basenames" class="tsd-kind-icon">Base<wbr>Names</a>
+								<a href="_base_.base.html#basename" class="tsd-kind-icon">Base<wbr>Name</a>
 							</li>
 							<li class=" tsd-kind-reference tsd-parent-kind-class">
 								<a href="_base_.base.html#codecfactory" class="tsd-kind-icon">Codec<wbr>Factory</a>
@@ -467,10 +467,10 @@
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/_base_.html#basecodes" class="tsd-kind-icon">Base<wbr>Codes</a>
+						<a href="../modules/_base_.html#basecode" class="tsd-kind-icon">Base<wbr>Code</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/_base_.html#basenames" class="tsd-kind-icon">Base<wbr>Names</a>
+						<a href="../modules/_base_.html#basename" class="tsd-kind-icon">Base<wbr>Name</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../modules/_base_.html#codecfactory" class="tsd-kind-icon">Codec<wbr>Factory</a>
