--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>multibase - v3.1.0</title>
-	<meta name="description" content="Documentation for multibase - v3.1.0">
+	<title>multibase - v3.1.1</title>
+	<meta name="description" content="Documentation for multibase - v3.1.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link href="https://unpkg.com/nord-highlightjs@0.1.0/dist/nord.css" rel="stylesheet" type="text/css" />
@@ -132,7 +132,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">multibase - v3.1.0</a>
+					<a href="index.html" class="title">multibase - v3.1.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<a href="#" class="toolbar-icon toolbar-icon-menu" data-toggle="menu"><i class="gg-menu"></i></a>
@@ -144,7 +144,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 			</ul>
-			<h1>multibase - v3.1.0</h1>
+			<h1>multibase - v3.1.1</h1>
 		</div>
 	</div>
 </header>
@@ -155,9 +155,9 @@
 				<a href="#js-multibase-" id="js-multibase-" style="color: inherit; text-decoration: none;">
 					<h1>js-multibase <!-- omit in toc --></h1>
 				</a>
-				<p><a href="https://protocol.ai"><img src="https://img.shields.io/badge/made%20by-Protocol%20Labs-blue.svg?style=flat-square" alt=""></a>
-					<a href="https://github.com/multiformats/multiformats"><img src="https://img.shields.io/badge/project-multiformats-blue.svg?style=flat-square" alt=""></a>
-					<a href="https://webchat.freenode.net/?channels=%23ipfs"><img src="https://img.shields.io/badge/freenode-%23ipfs-blue.svg?style=flat-square" alt=""></a>
+				<p><a href="https://protocol.ai"><img src="https://img.shields.io/badge/made%20by-Protocol%20Labs-blue.svg?style=flat-square" alt="pl"></a>
+					<a href="https://github.com/multiformats/multiformats"><img src="https://img.shields.io/badge/project-multiformats-blue.svg?style=flat-square" alt="project"></a>
+					<a href="https://webchat.freenode.net/?channels=%23ipfs"><img src="https://img.shields.io/badge/freenode-%23ipfs-blue.svg?style=flat-square" alt="irc"></a>
 					<a href="https://codecov.io/gh/multiformats/js-multibase"><img src="https://img.shields.io/codecov/c/github/multiformats/js-multibase.svg?style=flat-square" alt="codecov"></a>
 				<a href="https://github.com/multiformats/js-multibase/actions?query=branch%3Amaster+workflow%3Aci+"><img src="https://img.shields.io/github/workflow/status/multiformats/js-multibase/ci?label=ci&style=flat-square" alt="GitHub Workflow Status"></a></p>
 				<blockquote>
@@ -232,19 +232,19 @@
 						<a href="modules/__multibase_.html"> multibase</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_base_.html">base</a>
+						<a href="modules/__users_hd_code_pl_js_multibase_src_base_.html">/Users/hd/code/pl/js-multibase/src/base</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_constants_.html">constants</a>
+						<a href="modules/__users_hd_code_pl_js_multibase_src_constants_.html">/Users/hd/code/pl/js-multibase/src/constants</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_rfc4648_.html">rfc4648</a>
+						<a href="modules/__users_hd_code_pl_js_multibase_src_rfc4648_.html">/Users/hd/code/pl/js-multibase/src/rfc4648</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_types_.html">types</a>
+						<a href="modules/__users_hd_code_pl_js_multibase_src_types_.html">/Users/hd/code/pl/js-multibase/src/types</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_util_.html">util</a>
+						<a href="modules/__users_hd_code_pl_js_multibase_src_util_.html">/Users/hd/code/pl/js-multibase/src/util</a>
 					</li>
 				</ul>
 			</nav>
@@ -264,6 +264,9 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
