--- a/modules/__users_hd_code_pl_js_multibase_src_util_.html
+++ b/modules/__users_hd_code_pl_js_multibase_src_util_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;util&quot; | multibase - v3.1.0</title>
-	<meta name="description" content="Documentation for multibase - v3.1.0">
+	<title>&quot;/Users/hd/code/pl/js-multibase/src/util&quot; | multibase - v3.1.1</title>
+	<meta name="description" content="Documentation for multibase - v3.1.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link href="https://unpkg.com/nord-highlightjs@0.1.0/dist/nord.css" rel="stylesheet" type="text/css" />
@@ -132,7 +132,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">multibase - v3.1.0</a>
+					<a href="../index.html" class="title">multibase - v3.1.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<a href="#" class="toolbar-icon toolbar-icon-menu" data-toggle="menu"><i class="gg-menu"></i></a>
@@ -144,10 +144,10 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="_util_.html">util</a>
+					<a href="__users_hd_code_pl_js_multibase_src_util_.html">/Users/hd/code/pl/js-multibase/src/util</a>
 				</li>
 			</ul>
-			<h1>Module util</h1>
+			<h1>Module /Users/hd/code/pl/js-multibase/src/util</h1>
 		</div>
 	</div>
 </header>
@@ -161,9 +161,9 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_util_.html#concat" class="tsd-kind-icon">concat</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_util_.html#decodetext" class="tsd-kind-icon">decode<wbr>Text</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_util_.html#encodetext" class="tsd-kind-icon">encode<wbr>Text</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="__users_hd_code_pl_js_multibase_src_util_.html#concat" class="tsd-kind-icon">concat</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="__users_hd_code_pl_js_multibase_src_util_.html#decodetext" class="tsd-kind-icon">decode<wbr>Text</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="__users_hd_code_pl_js_multibase_src_util_.html#encodetext" class="tsd-kind-icon">encode<wbr>Text</a></li>
 							</ul>
 						</section>
 					</div>
@@ -252,32 +252,32 @@
 						<a href="__multibase_.html"> multibase</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_base_.html">base</a>
+						<a href="__users_hd_code_pl_js_multibase_src_base_.html">/Users/hd/code/pl/js-multibase/src/base</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_constants_.html">constants</a>
+						<a href="__users_hd_code_pl_js_multibase_src_constants_.html">/Users/hd/code/pl/js-multibase/src/constants</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_rfc4648_.html">rfc4648</a>
+						<a href="__users_hd_code_pl_js_multibase_src_rfc4648_.html">/Users/hd/code/pl/js-multibase/src/rfc4648</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_types_.html">types</a>
+						<a href="__users_hd_code_pl_js_multibase_src_types_.html">/Users/hd/code/pl/js-multibase/src/types</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="_util_.html">util</a>
+						<a href="__users_hd_code_pl_js_multibase_src_util_.html">/Users/hd/code/pl/js-multibase/src/util</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_util_.html#concat" class="tsd-kind-icon">concat</a>
+						<a href="__users_hd_code_pl_js_multibase_src_util_.html#concat" class="tsd-kind-icon">concat</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_util_.html#decodetext" class="tsd-kind-icon">decode<wbr>Text</a>
+						<a href="__users_hd_code_pl_js_multibase_src_util_.html#decodetext" class="tsd-kind-icon">decode<wbr>Text</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_util_.html#encodetext" class="tsd-kind-icon">encode<wbr>Text</a>
+						<a href="__users_hd_code_pl_js_multibase_src_util_.html#encodetext" class="tsd-kind-icon">encode<wbr>Text</a>
 					</li>
 				</ul>
 			</nav>
@@ -293,6 +293,9 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
