--- a/classes/__users_hd_code_pl_js_multibase_src_base_.base.html
+++ b/classes/__users_hd_code_pl_js_multibase_src_base_.base.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Base | multibase - v3.1.2</title>
-	<meta name="description" content="Documentation for multibase - v3.1.2">
+	<title>Base | multibase - v4.0.0</title>
+	<meta name="description" content="Documentation for multibase - v4.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link href="https://unpkg.com/nord-highlightjs@0.1.0/dist/nord.css" rel="stylesheet" type="text/css" />
@@ -132,7 +132,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">multibase - v3.1.2</a>
+					<a href="../index.html" class="title">multibase - v4.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<a href="#" class="toolbar-icon toolbar-icon-menu" data-toggle="menu"><i class="gg-menu"></i></a>
@@ -234,7 +234,7 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Base<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basename" class="tsd-signature-type">BaseName</a>, code<span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a>, factory<span class="tsd-signature-symbol">: </span><a href="../interfaces/__users_hd_code_pl_js_multibase_src_types_.codecfactory.html" class="tsd-signature-type">CodecFactory</a>, alphabet<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html" class="tsd-signature-type">Base</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Base<span class="tsd-signature-symbol">(</span>name<span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basename" class="tsd-signature-type">BaseName</a>, code<span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a>, factory<span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html#codecfactory" class="tsd-signature-type">CodecFactory</a>, alphabet<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__users_hd_code_pl_js_multibase_src_base_.base.html" class="tsd-signature-type">Base</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -251,7 +251,7 @@
 									<h5>code: <a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a></h5>
 								</li>
 								<li>
-									<h5>factory: <a href="../interfaces/__users_hd_code_pl_js_multibase_src_types_.codecfactory.html" class="tsd-signature-type">CodecFactory</a></h5>
+									<h5>factory: <a href="__users_hd_code_pl_js_multibase_src_base_.base.html#codecfactory" class="tsd-signature-type">CodecFactory</a></h5>
 								</li>
 								<li>
 									<h5>alphabet: <span class="tsd-signature-type">string</span></h5>
@@ -278,7 +278,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="code" class="tsd-anchor"></a>
 					<h3>code</h3>
-					<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basecode" class="tsd-signature-type">BaseCode</a></div>
+					<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -292,14 +292,14 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="codec" class="tsd-anchor"></a>
 					<h3>codec</h3>
-					<div class="tsd-signature tsd-kind-icon">codec<span class="tsd-signature-symbol">:</span> <a href="../interfaces/__users_hd_code_pl_js_multibase_src_types_.codec.html" class="tsd-signature-type">Codec</a></div>
+					<div class="tsd-signature tsd-kind-icon">codec<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="__users_hd_code_pl_js_multibase_src_base_.base.html#basename" class="tsd-signature-type">BaseName</a></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 					</aside>
 				</section>
@@ -366,9 +366,6 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/__users_hd_code_pl_js_multibase_src_rfc4648_.html">/Users/hd/code/pl/js-multibase/src/rfc4648</a>
-					</li>
-					<li class=" tsd-kind-module">
-						<a href="../modules/__users_hd_code_pl_js_multibase_src_types_.html">/Users/hd/code/pl/js-multibase/src/types</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/__users_hd_code_pl_js_multibase_src_util_.html">/Users/hd/code/pl/js-multibase/src/util</a>
@@ -448,9 +445,6 @@
 				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
 			</ul>
 		</div>
 	</div>
