--- a/modules.html
+++ b/modules.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>multibase - v4.0.3</title>
-	<meta name="description" content="Documentation for multibase - v4.0.3">
+	<title>multibase - v4.0.4</title>
+	<meta name="description" content="Documentation for multibase - v4.0.4">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script async src="assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">multibase - v4.0.3</a>
+					<a href="index.html" class="title">multibase - v4.0.4</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -50,7 +50,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>multibase - v4.0.3</h1>
+			<h1>multibase - v4.0.4</h1>
 		</div>
 	</div>
 </header>
@@ -142,7 +142,7 @@
 					<div class="tsd-signature tsd-kind-icon">codes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Readonly</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">BaseCode</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Base</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L148">index.js:148</a></li>
+							<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L147">index.js:147</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">names<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Readonly</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">BaseName</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">Base</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = ...</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L147">index.js:147</a></li>
+							<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L146">index.js:146</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -245,7 +245,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L116">index.js:116</a></li>
+									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L115">index.js:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -278,7 +278,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L133">index.js:133</a></li>
+									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L132">index.js:132</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -305,13 +305,13 @@
 					<a name="isencoded" class="tsd-anchor"></a>
 					<h3>is<wbr>Encoded</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">is<wbr>Encoded<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Uint8Array</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span></li>
+						<li class="tsd-signature tsd-kind-icon">is<wbr>Encoded<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Uint8Array</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;identity&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base2&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base8&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base10&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base16&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base16upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hex&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexpad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexpadupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32pad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32padupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32z&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base36&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base36upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base58btc&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base58flickr&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64pad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64url&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64urlpad&quot;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L78">index.js:78</a></li>
+									<li>Defined in <a href="https://github.com/multiformats/js-multibase/blob/master/src/index.js#L77">index.js:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -323,9 +323,11 @@
 							<ul class="tsd-parameters">
 								<li>
 									<h5>data: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Uint8Array</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;identity&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base2&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base8&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base10&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base16&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base16upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hex&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexpad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32hexpadupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32pad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32padupper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base32z&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base36&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base36upper&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base58btc&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base58flickr&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64pad&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64url&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;base64urlpad&quot;</span></h4>
 						</li>
 					</ul>
 				</section>
